# aprs-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements-test.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  validate.yml
blueprints/automation/aprs_monitor/: api_connection_actions.yaml  station_activity_actions.yaml  zone_activity_actions.yaml
custom_components/aprs_monitor/: __init__.py  activity.py  api.py  aprs_symbols.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_cleanup.py  device_tracker.py  diagnostics.py  diagnostics_data.py  event.py  geo.py  hub.py  icons.json  manifest.json  migration.py  profiles.py  sensor.py  station_summary.py  strings.json  symbol_view.py  system_health.py  validation.py
custom_components/aprs_monitor/aprs_symbol_assets/: COPYRIGHT.md  SOURCE.md
custom_components/aprs_monitor/frontend/: SOURCE.md  (+1 more)
docs/: README.de.md  architecture.md  dashboard.de.md  dashboard.md  entity-contract.md  installation.de.md  installation.md  release-checklist.md  upgrade.de.md
examples/: README.md  dashboard.yaml
script/: build_release.py
tests/: conftest.py  map-card.test.mjs  test_activity.py  test_api.py  test_aprs_symbols.py  test_device_cleanup.py  test_diagnostics.py  test_extras.py  test_frontend.py  test_geo.py  test_migration.py  test_profiles.py  test_release.py  test_station_summary.py  test_structure.py  test_symbol_view.py  test_translations.py  test_validation.py
(+9 files in other folders)
