[project]
name = "ha-aprs-monitor"
version = "1.2.0"
description = "APRS Monitor integration for Home Assistant"
requires-python = ">=3.12"

[project.urls]
Documentation = "https://github.com/DjangoToni/aprs-tracker"
Issues = "https://github.com/DjangoToni/aprs-tracker/issues"
Repository = "https://github.com/DjangoToni/aprs-tracker"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "N", "UP", "W"]
